updated user cells on radio page
* click --> view profile
* fixed tooltip issue

--- a/yaapp/templates/yabase/app/radio/radioUser.mustache
+++ b/yaapp/templates/yabase/app/radio/radioUser.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class='user'>
+    <a href='{{ root }}profile/<% username %>'>
     <img src='<% picture %>' width='30px' height='30px'/>
-    <div class='caption'>
-    </div>
+    </a>
 </div>
