fixed weird chrome bug for opacity on pause button
see http://stackoverflow.com/questions/11812268/jquery-animation-opacity-bug-move-images

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -665,7 +665,7 @@ body {
 #player #radio-cover #play-btn-large {
     width:76px;
     height:76px;
-    position:absolute;
+    position:relative;
     cursor: pointer;
 }
 
