--- a/yaapp/templates/yabase/app/gifts/gift.mustache
+++ b/yaapp/templates/yabase/app/gifts/gift.mustache
@@ -14,7 +14,7 @@
     <div class='done'>{% trans "action done" %}</div>
     <%/enabled%>
 
-    <h4><% name %> (<% count %><%#max%>/<% max %><%/max%>)</h4>
+    <h4><% name %></h4>
     <p><% description %></p>
 
 </div>
