--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -532,6 +532,7 @@ body {
     display:inline-block;
     float:left;
     width:188px;
+    height:41px;
     padding-top:0px;
     padding-left:20px;
 }
