--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -103,6 +103,10 @@ HTML, BODY { height: 100%; }
     <link rel="stylesheet" href="/media/css/webapp.css"/>
     {% endcompress %}
 
+    {% ifequal sound_player 'deezer' %}
+    <link rel="stylesheet" href="/media/css/deezer.css"/>
+    {% endifequal %}
+
 {% compress js %}
     <script type="text/javascript" src='/media/js/jquery-1.7.1.min.js'></script>
     <script type="text/javascript" src='/media/js/jquery.timers.js'></script>
