--- a/yaapp/media/css/deezer.css
+++ b/yaapp/media/css/deezer.css
@@ -1,3 +1,10 @@
+#player #metadata-container .button-group {
+  float:left;
+  width:100px;
+  margin-top:43px;
+}
+
+
 .modal {
   position: fixed;
   top:300px;
@@ -27,4 +34,17 @@
 
 .modal.fade.in {
   top:300px;
+}
+
+.link-out {
+    background-image: url('../app/images/link-out.png');
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    padding-left:28px;
+    color: #757b7d;
+}
+
+#contacts p a.link-out:hover {
+    color: #757b7d;
+    text-decoration: underline;
 }
