--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -103,7 +103,7 @@ HTML, BODY { height: 100%; }
     <link rel="stylesheet" href="/media/css/webapp.css"/>
     {% endcompress %}
 
-    {% ifequal sound_player 'deezer' %}
+    {% ifequal app_name 'deezer' %}
     <link rel="stylesheet" href="/media/css/deezer.css"/>
     {% endifequal %}
 
@@ -257,8 +257,13 @@ HTML, BODY { height: 100%; }
       {% include "yabase/app/gifts/gift.mustache" %}
    </script>
 
+
    <script type="text/html" id="trackTemplate">
+      {% ifequal app_name 'deezer' %}
+      {% include "yabase/app/track_deezer.mustache" with yasound_song=None %}
+      {% else %}
       {% include "yabase/app/track.mustache" with yasound_song=None %}
+      {% endifequal %}
    </script>
 
    <script type="text/html" id="signupPageTemplate">
