deezer update: added radio title

--- a/yaapp/templates/yabase/app/track_deezer.mustache
+++ b/yaapp/templates/yabase/app/track_deezer.mustache
@@ -4,6 +4,9 @@
 
 
 <div id='metadata-container'>
+  <div id='radio-title'>
+      <span><% radio_name %></span>
+  </div>
   <div class='button-group'>
     <a id="favorite-radio" class='is-not-favorite' href="#"></a>
     <a id="share-btn" data-toggle="modal" href="#modal-share"></a>
