--- a/yaapp/templates/yabase/app/login/login.mustache
+++ b/yaapp/templates/yabase/app/login/login.mustache
@@ -16,7 +16,7 @@
                     {% endifequal %}
             </div>
             <div class="signup-btn-twitter">
-                    <a class='screen-social-btn' href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Login with Twitter' %}</a>
+                    <a class='screen-social-btn' href="{% url socialauth_begin 'twitter' %}?next=/close/" rel="nofollow" target='_blank'><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Login with Twitter' %}</a>
                     <a class='mobile-social-btn' href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Use Twitter' %}</a>
             </div>
         </div>
