--- a/yaapp/templates/yabase/app/login/login.mustache
+++ b/yaapp/templates/yabase/app/login/login.mustache
@@ -7,17 +7,22 @@
         <h3>{% trans 'Login with Facebook or Twitter' %}</h3>
         <div class='signup-btns'>
             <div class="signup-btn-fbk">
-                    {% ifequal sound_player 'deezer' %}
-                    <a class='screen-social-btn' href="{% url socialauth_begin 'facebook' %}?next={{ request.get_full_path }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Login with Facebook' %}</a>
-                    <a class='mobile-social-btn' href="{% url socialauth_begin 'facebook' %}?next={{ request.get_full_path }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Use Facebook' %}</a>
+                    {% ifequal app_name 'deezer' %}
+                    <a class='screen-social-btn' href="{% url socialauth_begin 'facebook' %}?next={% url close %}" rel="nofollow" target='_blank'><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Login with Facebook' %}</a>
+                    <a class='mobile-social-btn' href="{% url socialauth_begin 'facebook' %}?next={% url close %}" rel="nofollow" target='_blank'><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Use Facebook' %}</a>
                     {% else %}
                     <a class='screen-social-btn' href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Login with Facebook' %}</a>
                     <a class='mobile-social-btn' href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Use Facebook' %}</a>
                     {% endifequal %}
             </div>
             <div class="signup-btn-twitter">
-                    <a class='screen-social-btn' href="{% url socialauth_begin 'twitter' %}?next=/close/" rel="nofollow" target='_blank'><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Login with Twitter' %}</a>
+                {% ifequal app_name 'deezer' %}
+                    <a class='screen-social-btn' href="{% url socialauth_begin 'twitter' %}?next={% url close %}" rel="nofollow" target='_blank'><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Login with Twitter' %}</a>
+                    <a class='mobile-social-btn' href="{% url socialauth_begin 'twitter' %}?next={% url close %}" rel="nofollow" target='_blank'><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Use Twitter' %}</a>
+                {% else %}
+                    <a class='screen-social-btn' href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Login with Twitter' %}</a>
                     <a class='mobile-social-btn' href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Use Twitter' %}</a>
+                {% endifequal %}
             </div>
         </div>
         <div id="signup-separation-line">&nbsp;</div>
