--- a/yaapp/templates/yabase/app/signup/signup.mustache
+++ b/yaapp/templates/yabase/app/signup/signup.mustache
@@ -8,12 +8,22 @@
         <h3>{% trans 'Quick registration with Facebook or Twitter' %}</h3>
         <div class='signup-btns'>
             <div class="signup-btn-fbk">
+                    {% ifequal app_name 'deezer' %}
+                    <a class='screen-social-btn' href="{% url socialauth_begin 'facebook' %}?next={% url close %}" rel="nofollow" target="_blank"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Quick registration with Facebook' %}</a>
+                    <a class='mobile-social-btn'href="{% url socialauth_begin 'facebook' %}?next={% url close %}" rel="nofollow" target="_blank"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Use Facebook' %}</a>
+                    {% else %}
     		    	<a class='screen-social-btn' href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Quick registration with Facebook' %}</a>
                     <a class='mobile-social-btn'href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Use Facebook' %}</a>
+                    {% endifequal %}
     	    </div>
     	    <div class="signup-btn-twitter">
+                    {% ifequal app_name 'deezer' %}
+                    <a class='screen-social-btn' href="{% url socialauth_begin 'twitter' %}?next={% url close %}" rel="nofollow" target="_blank"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Quick registration with Twitter' %}</a>
+                    <a class='mobile-social-btn'href="{% url socialauth_begin 'twitter' %}?next={% url close %}" rel="nofollow" target="_blank"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Use Twitter' %}</a>
+                    {% else %}
     		    	<a class='screen-social-btn' href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Quick registration with Twitter' %}</a>
                     <a class='mobile-social-btn'href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Use Twitter' %}</a>
+                    {% endifequal %}
     	    </div>
 	    </div>
 		<div id="signup-separation-line">&nbsp;</div>
