updated tooltip text

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -17,7 +17,7 @@
             <div class='button-group'>
 
                 <a id="favorite-radio" class='yatooltip is-not-favorite' href="#">
-                  <span class="yatoolelt">{% trans "Favorite" %}</span>
+                  <span class="yatoolelt">{% trans "Favorites" %}</span>
                 </a>
 
                 <a id="share-btn" class='yatooltip' data-toggle="modal" href="#modal-share">
