added text when wall radio is empty

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2406,6 +2406,10 @@ ul .user-cell:hover .caption {
 	border-radius:20px;
 }
 
+.wall-container .empty {
+    margin-left:30px;
+}
+
 .wall-event-message,
 .form-search {
 	margin:0px;
