--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -33,6 +33,7 @@
         {% endfor %}
         {% endif %}
     </ul>
+    <div class='empty' style='display:none'>{% trans "No post yet, be the first to comment!" %}</div>
     </div>
     <div id='pagination-wall'></div>
 </div>
