--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -215,6 +215,7 @@ HTML, BODY { height: 100%; }
     <script type="text/javascript" src='/media/js/app/utils.js'></script>
     <script type="text/javascript" src='/media/js/app/error.js'></script>
     <script type="text/javascript" src='/media/js/app/soundPlayer.js'></script>
+    <script type="text/javascript" src='/media/js/app/deezer.js'></script>
     <script type="text/javascript" src='/media/js/app/app.js'></script>
     {% endcompress %}
 
