updated programming style, no more left column

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2513,8 +2513,8 @@ ul#notifications {
     font-weight: bold;
 }
 
-.programming #playlist-actions,
-.programming #upload-actions
+.programming-container #playlist-actions,
+.programming-container #upload-actions
  {
     margin-bottom: 8px;
 }
