--- a/yaapp/templates/yabase/app/programming/addFromServer.mustache
+++ b/yaapp/templates/yabase/app/programming/addFromServer.mustache
@@ -2,7 +2,7 @@
 
 <form class="well form-inline">
     <input type='text' id='find-fuzzy-input' placeholder='{% trans "Global search" %}'/>
-    <input type='submit' class='yabutton-small' id='find-fuzzy-btn' value='{% trans 'find' %}'/>
+    <input type='submit' class='yabutton-small' id='find-fuzzy-btn' value='{% trans 'Search' %}'/>
     <label class="checkbox">
     <input type="checkbox" id='advanced'>{% trans "Advanced search "%}</input>
   </label>
@@ -12,10 +12,10 @@
     <input type='text' id='find-track-input' class='input-medium' placeholder='{% trans "Track" %}'/>
     <input type='text' id='find-album-input' class='input-medium' placeholder='{% trans "Album" %}'/>
     <input type='text' id='find-artist-input' class='input-medium' placeholder='{% trans "Artist" %}'/>
-    <input type='submit' class='yabutton-small' id='find-btn' value='{% trans 'find' %}'/>
+    <input type='submit' class='yabutton-small' id='find-btn' value='{% trans 'Search' %}'/>
 </form>
 
-<table class="table table-bordered table-striped">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>{% trans "Track" %}</th>
