--- a/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
+++ b/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div id='deezer-content'>
     <div id='deezer-playlists-container'>
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>{% trans "Playlist" %}</th>
@@ -15,7 +15,7 @@
 
     <div id='deezer-tracks-container' style='display:none;'>
         <button class='yabutton-small' id='import-all'>{% trans "Import all" %}</button>
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>{% trans "Track" %}</th>
