--- a/yaapp/templates/yabase/app/programming/deezer/trackCell.mustache
+++ b/yaapp/templates/yabase/app/programming/deezer/trackCell.mustache
@@ -3,5 +3,5 @@
 <td><%#album%><% title %><%/album%></td>
 <td><%#artist%><% name %><%/artist%></td>
 <td>
-    <button class='yabutton-small import'>{% trans 'import' %}</button
+    <button class='yabutton-small import'>{% trans 'Import' %}</button
 </td>
