--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -8,6 +8,8 @@
         <h1>{% trans "Programming" %}</h1>
     </div>
 
+    {% comment %}
+
     <div class='span3 no-margin'>
         <div id='programming-menu'>
             <ul class="">
@@ -16,9 +18,10 @@
               <li id='status-btn'><span>{% trans "History" %}</span></li>
             </ul>
         </div>
-    </div>
 
-    <div class='span9' id='playlist'>
+    </div>
+    {% endcomment %}
+    <div class='span12' id='playlist'>
     </div>
 
     <div class='span9' id='status' style='display:none'/>
