--- a/yaapp/templates/yabase/app/programming/songInstanceCell.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstanceCell.mustache
@@ -3,5 +3,5 @@
 <td><a href='#' class='album'><% metadata__album_name %></a></td>
 <td><a href='#' class='artist'><% metadata__artist_name %></a></td>
 <td>
-    <button class='yabutton-small remove'>{% trans 'remove' %}</button
+    <button class='yabutton-small remove'>{% trans 'Remove' %}</button
 </td>
