--- a/yaapp/templates/yabase/app/programming/statusCell.mustache
+++ b/yaapp/templates/yabase/app/programming/statusCell.mustache
@@ -4,7 +4,7 @@
 <td><% formatted_type %></td>
 <td><% formatted_status %></td>
 <td>
-    <button class='yabutton-small open'>{% trans 'open' %}</button>
-    <button class='yabutton-small delete'>{% trans 'delete' %}</button>
+    <button class='yabutton-small open'>{% trans 'Open' %}</button>
+    <button class='yabutton-small delete'>{% trans 'Delete' %}</button>
 </td>
 
