--- a/yaapp/templates/yabase/app/programming/uploadCell.mustache
+++ b/yaapp/templates/yabase/app/programming/uploadCell.mustache
@@ -6,7 +6,7 @@
     </div>
 </td>
 <td>
-    <button class='yabutton-small left' id='start'>{% trans 'start' %}</button>
-    <button class='yabutton-small left hide' id='stop'>{% trans 'abort' %}</button>
-    <button class='yabutton-small left' id='remove'>{% trans 'remove' %}</button>
+    <button class='yabutton-small left' id='start'>{% trans 'Start' %}</button>
+    <button class='yabutton-small left hide' id='stop'>{% trans 'Cancel' %}</button>
+    <button class='yabutton-small left' id='remove'>{% trans 'Remove' %}</button>
 </td>
