--- a/yaapp/templates/yabase/app/programming/songInstances.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstances.mustache
@@ -4,7 +4,7 @@
     <button class='yabutton-small' id='remove-all'>{% trans "Remove all songs" %}</button>
 </div>
 
-<table class="table table-bordered table-striped">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>{% trans "Track" %}</th>
