added info block on radio

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2234,6 +2234,17 @@ ul .user-cell:hover .caption {
     width:200px;
 }
 
+
+#radio-infos {
+    margin-top:25px;
+}
+#radio-infos h1 {
+    font-size:24px;
+}
+
+#radio-infos p {
+    color: #999999;
+}
 /**
  * Wall
  */
