--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -13,7 +13,9 @@
         <div class='yabutton-small audience-btn float-right'>{% trans "Show all" %}</div>
     </div>
 </div>
-<div class='span8 wall-container'>
+<div class='span8'>
+    <div id='radio-infos'>{% if radio %}{% include "yabase/app/radio/radioInfos.mustache" %} {% endif %}</div>
+    <div class='wall-container'>
     <div id='webapp-wall-input'>{% if radio %}{% include "yabase/app/radio/wallInput.mustache" %} {% endif %}</div>
     <div>
     <ul id='wall'>
@@ -36,6 +38,7 @@
     <div class='empty' style='display:none'>{% trans "No post yet, be the first to comment!" %}</div>
     </div>
     <div id='pagination-wall'></div>
+    </div>
 </div>
 
 <div class="modal hide fade" id="modal-report-abuse">
