--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -288,6 +288,10 @@ HTML, BODY { height: 100%; }
      {% include "yabase/app/radio/radioPage.mustache" with wall_events=None%}
    </script>
 
+   <script type='text/html' id='radioInfosTemplate'>
+     {% include "yabase/app/radio/radioInfos.mustache" with radio=None%}
+   </script>
+
    <script type="text/html" id="wallEventTemplateMessage">
       {% include "yabase/app/radio/wallEvent.message.mustache" %}
    </script>
