--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4264,7 +4264,7 @@ a.yabutton-small {
 #teaser {
     text-align:center;
     font-size:18px;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'proxima-nova', sans-serif;
     margin-bottom:12px;
 }
 
