--- a/yaapp/templates/account/password_reset_form.html
+++ b/yaapp/templates/account/password_reset_form.html
@@ -8,14 +8,14 @@
 <div class='container-fluid'>
     <div class='row-fluid'>
         <div class='span3'>
-        <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+        <a href='/'><img src='/media/images/logos/yasound-grey.png' alt='Yasound logo'/></a>
         </div>
     </div>
 </div>
 <div class='container-fluid login-back3'>
     <div class='row-fluid'>
         <div class='span12'>
-        
+
             <div class='well-center'>
                 <h2>{% trans "Lost password" %}</h2>
 {% if messages %}
@@ -24,7 +24,7 @@
     <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
 </ul>
-{% endif %}                
+{% endif %}
                 {% if request.user.is_authenticated %}
                 <p>{% trans "You are already authenticated" %}.
                 <a href='{% url logout%}'>{% trans "Logout" %}</a></p>
@@ -36,9 +36,9 @@
                 <button type="submit" class="btn btn-primary">{% trans "Reset" %}</button>
                 </fieldset>
                 </form>
-                
+
             </div>
-    </div>    
+    </div>
 
   </div>
 </div>
@@ -50,7 +50,7 @@
         <img src='/media/images/available-appstore-fr.png' alt='{% trans "available on appstore" %}'/>
         </a>
         </div>
-    </div>    
+    </div>
     <footer>
       <div id="menu">
       {% if request.user.is_authenticated %}<a href="{% url logout %}">{% trans "Logout" %}</a> | {% endif %} <a href="http://yasound.com/fr/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/fr/jobs.php">Jobs</a> | <a href="http://yasound.com/fr/presse.php">Presse</a> | <a href="http://yasound.com/fr/contact.php">Contact</a>
@@ -61,6 +61,6 @@
 </body>
 {% endblock %}
 
-    
+
 
 
