--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -46,6 +46,8 @@
 <![endif]-->
 
 <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="//use.typekit.net/qfb4bbn.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 {% block extra_head %}
     {% block fb_open_graph %}{% endblock %}
