--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4260,15 +4260,38 @@ a.yabutton-small {
     display:none;
 }
 
+#teaser-bg {
+    position:absolute;
+    top:168px;
+    background: url(../app/images/teaser/background.jpg) no-repeat 50% 50%;
+    background-size: 100%;
+    width:100%;
+    height:323px;
+    z-index:-10;
+}
 
 #teaser {
     text-align:center;
-    font-size:18px;
+    font-size:16px;
+    font-weight: 100;
     font-family: 'proxima-nova', sans-serif;
     margin-bottom:12px;
+    z-index:8;
+    height:323px;
 }
 
-#teaser .span4 {
+#teaser h1 {
+    color: white;
+    text-shadow:1px 1px #0000006d;
+    font-size:34px;
+    font-weight: 100;
+}
+
+#teaser h1 strong {
+    font-weight:400;
+}
+
+#teaser .span3 {
     background: url(../app/images/teaser/separator.png) no-repeat 100% 50%;
 }
 
@@ -4276,18 +4299,50 @@ a.yabutton-small {
     background: none;
 }
 
+#teaser #teaser-action {
+    color: white;
+}
+
+#teaser #teaser-action #free {
+    margin-top:74px;
+    font-weight:100;
+    font-size:15px;
+    font-style: italic;
+    text-align:right;
+    margin-right:40px;
+    padding-right:32px;
+    margin-bottom:6px;
+    background: url(../app/images/teaser/free-arrow.png) no-repeat;
+    background-position: right 6px;
+    height:28px;
+}
+
+#teaser #teaser-action #teaser-signup-now-btn {
+    display:block;
+    color:white;
+    text-shadow:1px 1px #0a7aa1;
+    background: url(../app/images/teaser/create-btn.png) no-repeat;
+    height:43px;
+    line-height:40px;
+}
+#teaser #teaser-action #teaser-signup-later-btn {
+    display:block;
+    margin-top:12px;
+    font-size:14px;
+    color:white;
+}
+
 #teaser p {
     margin:20px;
-    margin-left:50px;
-    margin-right:50px;
-    margin-bottom:35px;
+    margin-bottom:25px;
     line-height:24px;
-    color:#353a3c;
+    color: white;
+    text-shadow:1px 1px #0000006d;
 }
 
 #teaser p a {
-    font-weight: bold;
-    color:#353a3c;
+    font-weight: 400;
+    color: white;
 }
 
 #teaser img {
@@ -4295,11 +4350,11 @@ a.yabutton-small {
     margin-bottom:12px;
 }
 
-#teaser .span4 #close-btn-container {
+#teaser .span3 #close-btn-container {
     float:right;
 }
 
-#teaser .span4 .auto-hide {
+#teaser .span3 .auto-hide {
     display: none;
 }
 
@@ -6359,7 +6414,7 @@ a.yabutton-small {
         width:286px;
     }
 
-    #player #metadata-container #radio-title span {
+    #player #metadata-container #radio-title #title {
         line-height:25px;
         display:inline-block;
         width: 214px;
@@ -6368,7 +6423,7 @@ a.yabutton-small {
     }
 
 
-    #player #metadata-container #player-title span {
+    #player #metadata-container #player-title #track-title {
         display: inline-block;
         overflow: hidden;
         width:155px;
