--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -259,6 +259,9 @@ HTML, BODY { height: 100%; }
    <script type="text/html" id="giftTemplate">
       {% include "yabase/app/gifts/gift.mustache" %}
    </script>
+   <script type="text/html" id="radioInlineTemplate">
+      {% include "yabase/app/programming/radioInline.mustache" with radio=None %}
+   </script>
 
 
    <script type="text/html" id="trackTemplate">
