--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -1,11 +1,14 @@
 {% load i18n %}
 <div class='row  programming-container'>
     <div class='span12 no-margin'>
+
         <div class='btn-group right' id='programming-top-toolbar'>
             <button type="button" class='yabutton-small' id='listen-btn'>{% trans 'Listen now' %}</button>
             <button type="button" class='yabutton-small' id='edit-settings-btn'>{% trans 'Settings' %}</button>
         </div>
         <h1>{% trans "Programming" %}</h1>
+        <div id='radio'></div>
+        <hr/>
     </div>
 
     {% comment %}
