added export selection to deezer function

--- a/yaapp/templates/yabase/app/programming/songInstances.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstances.mustache
@@ -2,6 +2,9 @@
 <div id='programming-filters'></div>
 <div id='playlist-actions'>
     <button class='yabutton-small' id='remove-all'>{% trans "Remove all songs" %}</button>
+    {% ifequal app_name 'deezer' %}
+    <button class='yabutton-small' id='export-deezer'>{% trans "Export selection to Deezer" %}</button>
+    {% endifequal %}
 </div>
 
 <table class="table table-bordered">
