updated teaser image

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -668,7 +668,11 @@ HTML, BODY { height: 100%; }
       <div class='span3 last' id='teaser-action'>
           <div id='free'>{% trans "It's free" %}</div>
           <a id='teaser-signup-now-btn' href='{% app_url webapp_signup app_name %}'>{% trans "Create an account" %}</a>
-          <a id='teaser-signup-later-btn' href='#'>{% trans "Signup later" %}</a>
+          <a id='teaser-signup-later-btn' href='#'>{% trans "No, thank you, later" %}</a>
+          <div id="app">
+              <a href="http://itunes.apple.com/us/app/yasound/id492680161?ls=1&mt=8"><img src="/media/app/images/teaser/appstore_now.png" width="167" height="58"/></a>
+          </div>
+
       </div>
     </div>
   </div>
