--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4271,7 +4271,7 @@ a.yabutton-small {
     position:absolute;
     top:168px;
     background: url(../app/images/teaser/background.jpg) no-repeat 50% 50%;
-    background-size: 100%;
+    background-size: 100% 100%;
     width:100%;
     height:323px;
     z-index:-10;
@@ -4311,7 +4311,7 @@ a.yabutton-small {
 }
 
 #teaser #teaser-action #free {
-    margin-top:74px;
+    margin-top:27px;
     font-weight:100;
     font-size:15px;
     font-style: italic;
@@ -4335,8 +4335,15 @@ a.yabutton-small {
 #teaser #teaser-action #teaser-signup-later-btn {
     display:block;
     margin-top:12px;
-    font-size:14px;
     color:white;
+    text-shadow:1px 1px #0000006d;
+    height:44px;
+    line-height:44px;
+    background: url(../app/images/teaser/later-btn.png) no-repeat;
+}
+
+#teaser #teaser-action #app {
+    margin-top:12px;
 }
 
 #teaser p {
