--- a/yaapp/templates/yabase/app/footer.html
+++ b/yaapp/templates/yabase/app/footer.html
@@ -23,20 +23,14 @@
                 <a id='btn-about' href="{% app_url webapp_about app_name %}"
                     class="footer-text-color1"
                     title="{% trans 'About' %}">{% trans 'About' %}</a> -
-                <a id='btn-help' href="{% app_url webapp_help app_name %}"
-                    class="footer-text-color1"
-                    title="{% trans 'Help' %}">{% trans "Help" %}</a>
-            </p>
-            <p>
                 <a id='btn-press' href="{% app_url webapp_press app_name %}"
                     class="footer-text-color1"
-                    title="{% trans 'Press' %}">{% trans 'Press' %}</a> -
-                <a id='btn-jobs' href="{% app_url webapp_jobs app_name %}"
-                    class="footer-text-color1"
-                    title="{% trans 'Jobs' %}">{% trans "Jobs" %}</a>
+                    title="{% trans 'Press' %}">{% trans 'Press' %}</a>
             </p>
             <p>
-                <a id='btn-contact' href="{% app_url webapp_contact app_name %}" class="footer-text-color1" title="{% trans 'Contact' %}">{% trans "Contact" %}</a> -
+                <a id='btn-jobs' href="{% app_url webapp_jobs app_name %}"
+                    class="footer-text-color1"
+                    title="{% trans 'Jobs' %}">{% trans "Jobs" %}</a> -
                 <a id='btn-legal' href="{% app_url webapp_legal app_name %}" class="footer-text-color1" title="{% trans 'Legal informations' %}">{% trans 'Legal informations' %}</a>
             </p>
                 {% endifequal %}
