--- a/yaapp/templates/base_mobile.html
+++ b/yaapp/templates/base_mobile.html
@@ -4,7 +4,7 @@
 <head>
     <title>{% block head_title %}Home{% endblock %} — Yasound</title>
     <link rel="icon" type="image/png" href="/media/yaweb/images/favicon.png" />
-	<meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile." />
+	<meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net et sur votre mobile." />
 	<meta name="Author" content="Yasound SAS" />
 	<meta name="copyright" content="Yasound SAS" />
 	<meta http-equiv="Cache-control" content="public" />
@@ -17,7 +17,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="fb:admins" content="USER_ID"/>
 	<meta property="og:description"
-	      content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile."/>
+	      content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net et sur votre mobile."/>
 
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/media/css/style.css"/>
