--- a/yaapp/templates/yabase/widget_large.html
+++ b/yaapp/templates/yabase/widget_large.html
@@ -5,7 +5,7 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# yasoundev: http://ogp.me/ns/fb/yasoundev#">
     <title>{% trans "Listening to" %} {{ radio }} — Yasound</title>
     <link rel="icon" type="image/png" href="/media/app/images/favicon.png" />
-    <meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile." />
+    <meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net et sur votre mobile." />
     <meta name="Author" content="Yasound SAS" />
     <meta name="copyright" content="Yasound SAS" />
     <meta http-equiv="Cache-control" content="public" />
